# kmerutils

./: .gitignore  Cargo.toml  README.md  config
examples/: reloadkmermulti.rs
src/: alphabet.rs  anchor.rs  groups.rs  hashed.rs  invhash.rs  io.rs  jaccardweight.rs  kmer.rs  kmercount.rs  kmergenerator.rs  lib.rs  minhash.rs  mininvhashkmer.rs  nohasher.rs  nthash.rs  parsearg.rs  prelude.rs  probminhash.rs  qualclient.rs  quality.rs  readas2dpath.rs  redisbase.rs  seqblocksketch.rs  seqminhash.rs  seqsketcher.rs  seqsketchjaccard.rs  sequence.rs  sketcharg.rs  sketchio.rs  statutils.rs  superminhash.rs
src/aautils/: kmeraa.rs  mod.rs  seqsketchjaccard.rs  setsketchert.rs
src/base/: alphabet.rs  kmer.rs  kmer16b32bit.rs  kmer32bit.rs  kmer64bit.rs  kmeraa.rs  kmercount.rs  kmergenerator.rs  kmertraits.rs  mod.rs  nthash.rs  sequence.rs
src/examples/: reloadkmermulti.rs
src/quality/: mod.rs  qserverclient.rs  qualclient.rs  quality.rs
src/rnautils/: kmeraa.rs  mod.rs  seqsketchjaccard.rs
src/sketching/: minhash.rs  mod.rs  nbkmerguess.rs  seqblocksketch.rs  seqminhash.rs  seqsketchjaccard.rs  setsketchert.rs
tests/: testredis.rs
