[package]
name = "kmerutils"
version = "0.0.1"
authors = ["jeanpierre.both@gmail.com"]
#repository = "https://github.com/jean-pierreBoth/kmerutils"
keywords = ["genomics", "hash", "kmer"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Kmer counting, hashing"


[features]


[[bin]]

name= "parsefastq"
path= "src/bin/parsefastq.rs"

[[bin]]

name= "qualityloader"
path= "src/bin/qualityload.rs"

[[bin]]

name= "datasketcher"
path = "src/bin/datasketcher.rs"

[[example]]

name="kmerreload"
path="examples/reloadkmermulti.rs"


[lib]

path = "src/lib.rs"
test=true

doc=true
#[[example]]




[dependencies]
# default is version spec is ^ meaning can update up to max non null version number
# cargo doc --no-deps avoid dependencies doc generation
#

serde= {version = "1.0", features = ["derive"] }

histogram =  {version = "0.6"}

multimap= {version =  "0.4.0"}

# for networking
zmq= {version =  "0.9"}
xdr-codec= {version = "0.2.5"}

# for //
crossbeam-utils = {version = "0.8"}
crossbeam-channel = {version = "0.5"}

parking_lot ={version="0.11"}
rayon = {version = "1.5"}
num_cpus = {version = "1.13.0"}

time = {version = "0.2"}
ndarray = {version = "0.14"}
needletail = {version = "0.4"}
wavelet-matrix = { version = "0.4.7"}
clap = {version = "2.33"}

#  for hashing 
wyhash = {version = "0.4"}
rand = {version = "0.8"}
rand_distr = {version = "0.4"}
rand_xorshift = {version = "0.3"}
rand_xoshiro = {version = "0.6"}

cuckoofilter = {version="0.5"}
bloom = {version="0.3"}
metrohash = {version ="1.0.5"}

fxhash = { version= "0.2"}
indexmap = { version = "1.6"}
fnv = {version= "1.0"}
##

probminhash = {version = "0.1.3"}
#probminhash = {path = "../probminhash"}
hnsw_rs =  {version = "0.1.13"}
#hnsw_rs = {path = "../hnswlib-rs"}


lazy_static = { version = "1.4"}

redis = { version = "0.17.0"}
# decreasing order of log for debug build : (max_level_)trace debug info warn error off
# decreasing order of log for release build (release_max_level_)  .. idem
#log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
log = { version = "0.4"}
env_logger = { version = "0.9"}
