[package]
name = "kmerutils"
version = "0.0.8"
authors = ["jeanpierre.both@gmail.com"]
repository = "https://github.com/jean-pierreBoth/kmerutils"
documentation = "https://docs.rs/kmerutils"
keywords = ["genomics", "hash", "kmer"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Kmer counting, hashing"




[[bin]]

name= "parsefastq"
path= "src/bin/parsefastq.rs"

[[bin]]

name= "qualityloader"
path= "src/bin/qualityload.rs"
required-features = ["withzmq"]

[[bin]]

name= "datasketcher"
path = "src/bin/datasketcher.rs"

[[example]]

name="kmerreload"
path="examples/reloadkmermulti.rs"


[lib]

path = "src/lib.rs"
test=true

doc=true
#[[example]]




[dependencies]
# default is version spec is ^ meaning can update up to max non null version number
# cargo doc --no-deps avoid dependencies doc generation
#
serde= {version = "1.0", features = ["derive"] }
serde_json= {version = "1.0"}

num = {version = "0.4"}
hdrhistogram =  {version = "7.5"}

multimap= {version =  "0.4.0"}

# for networking
zmq= {version =  "0.9", optional = true}
xdr-codec= {version = "0.2.5"}

# for //
crossbeam = {version = "0.8"}

parking_lot ={version="0.12"}
rayon = {version = "1.6"}
num_cpus = {version = "1.13"}

ndarray = {version = "0.15"}
needletail = {version = "0.5"}
wavelet-matrix = { version = "0.4.7"}
clap = {version = "4.1"}

#  for hashing 
wyhash = {version = "0.5"}
rand = {version = "0.8"}
rand_distr = {version = "0.4"}
rand_xorshift = {version = "0.3"}
rand_xoshiro = {version = "0.6"}

cuckoofilter = {version="0.5"}
bloom = {version="0.3"}
metrohash = {version ="1.0.5"}

fxhash = { version= "0.2"}
indexmap = { version = "1.9"}
fnv = {version= "1.0"}

##

#probminhash = {version = "0.1.8"}
probminhash =  {git = "https://github.com/jean-pierreBoth/probminhash"}
# probminhash = {path = "../probminhash"}
#
hnsw_rs =  {version = "0.1.19"}
#hnsw_rs = {path = "../hnswlib-rs"}


lazy_static = { version = "1.4"}

redis = { version = "0.21.0"}
# decreasing order of log for debug build : (max_level_)trace debug info warn error off
# decreasing order of log for release build (release_max_level_)  .. idem
#log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
log = { version = "0.4"}
env_logger = { version = "0.9"}


[features]

default = ["sminhash2"]

# This feature requires libzmq (and libsodium). It enables loadind of quality as a service in the target qualityloader
withzmq = ["zmq"]

simdeez_f = ["hnsw_rs/simdeez_f"]

sminhash2 = ["probminhash/sminhash2"]

